# guess-v2

./: .gitignore  README.md  cabal.project  nft-sc.cabal
src/Guess/: OffChain.hs  OnChain.hs
